--- a/Contact.html
+++ b/Contact.html
@@ -37,7 +37,7 @@
   </ul>
   <div id="article">
 
-  <p>  <img src="Sa.png" width="600">  </p>
+  <p>  <a href="https://map.naver.com/?mapmode=0&lng=c243d129215f1d876b8508f06c3f5383&pinId=1001174635&pinType=site&lat=9c94162d230871b667167d4a7f2f299d&dlevel=11&enc=b64"><img src="Sa.png" width="600"></a>  </p>
     <h2>
       <i class="   icon-map-o"></i>  CONTACT
     </h2>
