--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
 
   <body>
 <div id="background">
-    <h1><a href="Main.html">Justice Fantasy</a></h1>
+    <h1><a href="index.html">Justice Fantasy</a></h1>
 
 
 <div id="grid">
