--- a/1.html
+++ b/1.html
@@ -57,10 +57,10 @@
     <h3>
       극중 포보스의 등장
     </h3>
-    <img src="1.jpg.jpg" width="400">
+    <a href="1a.html"><img src="1.jpg.jpg" width="400"></a>
 
     <p>
-      <h4>Oil on canvas 150x150</h4>
+      <h4>150x150 Oil on canvas 2019</h4>
     </p>
 
     </div>
