--- a/10.html
+++ b/10.html
@@ -57,10 +57,10 @@
     <h3>
       Yellow icon
     </h3>
-    <img src="10.jpg.jpg" width="300">
+    <a href="10a.html"><img src="10.jpg.jpg" width="300"></a>
 
     <p>
-      <h4>Oil on canvas 52.5x45.5</h4>
+      <h4>52.5x45.5 Oil on canvas 2019 </h4>
     </p>
 
     </div>
