--- a/11.html
+++ b/11.html
@@ -57,10 +57,10 @@
     <h3>
       -그날밤-아이돌
     </h3>
-    <img src="11.jpg.jpg" width="400">
+    <a href="11a.html"><img src="11.jpg.jpg" width="400"></a>
 
     <p>
-      <h4>Oil on canvas 26x18</h4>
+      <h4>26x18 Oil on canvas 2019</h4>
     </p>
 
     </div>
