--- a/12.html
+++ b/12.html
@@ -57,10 +57,10 @@
     <h3>
       야만의 시
     </h3>
-    <img src="12.jpg.jpg" width="300">
+    <a href="12a.html"><img src="12.jpg.jpg" width="300"></a>
 
     <p>
-      <h4>Oil on canvas 162.2x83.2</h4>
+      <h4>162.2x83.2 Oil on canvas 2019 </h4>
     </p>
 
     </div>
