--- a/13.html
+++ b/13.html
@@ -57,10 +57,10 @@
     <h3>
       -오늘밤- 불꽃으로
     </h3>
-    <img src="13.jpg.jpg" width="550">
+    <a href="13a.html"><img src="13.jpg.jpg" width="550"></a>
 
     <p>
-      <h4>Oil on canvas 145x88.5</h4>
+      <h4>145x88.5 Oil on canvas 2019 </h4>
     </p>
 
     </div>
