--- a/14.html
+++ b/14.html
@@ -57,10 +57,10 @@
     <h3>
       Hellfire party
     </h3>
-    <img src="14.jpg.jpg" width="550">
+    <a href="14a.html"><img src="14.jpg.jpg" width="550"></a>
 
     <p>
-      <h4>Oil on canvas 97x145.5</h4>
+      <h4>97x145.5 Oil on canvas 2019 </h4>
     </p>
 
     </div>
