--- a/2.html
+++ b/2.html
@@ -57,10 +57,10 @@
     <h3>
       For Justice
     </h3>
-    <img src="2.jpg.jpg" width="400">
+    <a href="2a.html"><img src="2.jpg.jpg" width="400"></a>
 
     <p>
-      <h4>Oil on canvas 145x115.5</h4>
+      <h4>145x115.5 Oil on canvas 2019 </h4>
     </p>
 
     </div>
