--- a/3.html
+++ b/3.html
@@ -57,10 +57,10 @@
     <h3>
       Justice knight
     </h3>
-    <img src="3.jpg.jpg" width="400">
+    <a href="3a.html"><img src="3.jpg.jpg" width="400"></a>
 
     <p>
-      <h4>Oil on canvas 200x147</h4>
+      <h4>200x147 Oil on canvas 2019 </h4>
     </p>
 
     </div>
