--- a/4.html
+++ b/4.html
@@ -57,10 +57,10 @@
     <h3>
       Masochist
     </h3>
-    <img src="4.jpg.jpg" width="400">
+    <a href="4a.html"><img src="4.jpg.jpg" width="400"></a>
 
     <p>
-      <h4>Oil on canvas 129x193</h4>
+      <h4>129x193 Oil on canvas 2019</h4>
     </p>
 
     </div>
