--- a/5.html
+++ b/5.html
@@ -55,12 +55,12 @@
 
 
     <h3>
-      치천사
+      우리엘
     </h3>
-    <img src="5.jpg.jpg" width="400">
+    <a href="5a.html"><img src="5.jpg.jpg" width="400"></a>
 
     <p>
-      <h4>Oil on canvas 162.2x130.3</h4>
+      <h4>162.2x130.3 Oil on canvas 2019</h4>
     </p>
 
     </div>
