--- a/6.html
+++ b/6.html
@@ -57,10 +57,10 @@
     <h3>
       골리앗의 아들
     </h3>
-    <img src="6.jpg.jpg" width="400">
+    <a href="6a.html"><img src="6.jpg.jpg" width="400"></a>
 
     <p>
-      <h4>Oil on canvas 145x96.5</h4>
+      <h4>145x96.5 Oil on canvas 2019 </h4>
     </p>
 
     </div>
