--- a/7.html
+++ b/7.html
@@ -57,10 +57,10 @@
     <h3>
       Altar 문제를 해결하는 방법에 대해
     </h3>
-    <img src="7.jpg.jpg" width="300">
+    <a href="7a.html"><img src="7.jpg.jpg" width="300"></a>
 
     <p>
-      <h4>Oil on canvas 162.2x130.3/130.3x130.3</h4>
+      <h4>162.2x130.3/130.3x130.3 Oil on canvas 2019 </h4>
     </p>
 
     </div>
