--- a/8.html
+++ b/8.html
@@ -57,10 +57,10 @@
     <h3>
       -새벽-불꽃으로!
     </h3>
-    <img src="8.jpg.jpg" width="400">
+    <a href="8a.html"><img src="8.jpg.jpg" width="400"></a>
 
     <p>
-      <h4>Oil on canvas 41x27</h4>
+      <h4>41x27 Oil on canvas 2019 </h4>
     </p>
 
     </div>
