--- a/9.html
+++ b/9.html
@@ -57,10 +57,10 @@
     <h3>
       -황혼-이글이글
     </h3>
-    <img src="9.jpg.jpg" width="400">
+    <a href="9a.html"><img src="9.jpg.jpg" width="400"></a>
 
     <p>
-      <h4>Oil on canvas 26x17.5</h4>
+      <h4>26x17.5 Oil on canvas 2019 </h4>
     </p>
 
     </div>
